// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityListItem should match snapshot with no props 1`] = `
<div>
  <div
    class="flex flex-row flex-wrap gap-4 pt-3 pb-3 px-4 bg-default activity-list-item activity-list-item--single-content-row w-full"
    tabindex="0"
  >
    <div
      class="flex flex-row gap-4 w-full"
    >
      <div
        class="justify-between activity-list-item__content-container inline-flex w-full"
      >
        <div
          class="flex-col activity-list-item__detail-container inline-flex min-w-0"
        >
          <div
            class="flex flex-row items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
              data-testid="activity-list-item-action"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivityListItem should match snapshot with props 1`] = `
<div>
  <div
    class="flex flex-row flex-wrap gap-4 pt-3 pb-3 px-4 bg-default activity-list-item list-item-test w-full"
    data-testid="test-id"
    tabindex="0"
  >
    <p
      class="mm-box mm-text mm-text--body-md-medium mm-box--display-flex mm-box--width-full mm-box--color-text-default"
    >
      <p>
        Content rendered at the top
      </p>
    </p>
    <div
      class="flex flex-row gap-4 w-full"
    >
      <div
        class="inline-flex"
      >
        <span
          class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/accessibility.svg');"
        />
      </div>
      <div
        class="justify-between activity-list-item__content-container inline-flex w-full"
      >
        <div
          class="flex-col activity-list-item__detail-container inline-flex min-w-0"
        >
          <div
            class="flex flex-row items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
              data-testid="activity-list-item-action"
            >
              Hello World
            </p>
          </div>
          <div
            class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
          >
            <p>
              I am a list item
            </p>
          </div>
          <div
            class="activity-list-item__children"
          >
            <button>
              I am a button
            </button>
          </div>
        </div>
        <div
          class="activity-list-item__mid-content inline-flex"
        >
          <p>
            Content rendered in the middle
          </p>
        </div>
        <div
          class="flex-col items-end activity-list-item__right-content inline-flex h-min"
        >
          <p>
            Content rendered to the right
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
